Correct font sizes and spacing - Hero

--- a/scss/_c-content.scss
+++ b/scss/_c-content.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 .c-h1 {
-  font-size: 3.2rem;
+  font-size: 4rem;
   font-weight: 600;
   color: $g-heading-color;
   line-height: 1.25;
