--- a/scss/_c-hero.scss
+++ b/scss/_c-hero.scss
@@ -17,6 +17,11 @@
   }
 }
 
+.c-hero__content p {
+  font-size: 2rem;
+  padding: 1.6rem 0;
+}
+
 .c-hero__illustration {
   border: 0.1rem solid #FD8AF7;
   padding: 2.4rem 4.8rem;
